unpackaged/main/default/objects/Plaid_Document_Verification__c/Plaid_Document_Verification__c.object-meta.xml
<CustomObject>
    <label>Plaid Document Verification</label>
    <nameField>
        <displayFormat>PDV - {0000000}</displayFormat>
        <label>Plaid Document Verification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plaid Document Verifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>