unpackaged/main/default/objects/Plaid_Document_Verification__c/fields/Authenticity__c.field-meta.xml
<CustomField>
    <fullName>Authenticity__c</fullName>
    <description>documents.analysis.authenticity</description>
    <inlineHelpText>High level summary of whether the document in the provided image matches the formatting rules and security checks for the associated jurisdiction.</inlineHelpText>
    <label>Authenticity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>