unpackaged/main/default/objects/Plaid_Document_Verification__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>documents.extracted_data.address.city</description>
    <inlineHelpText>The city extracted from the document.</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>