unpackaged/main/default/objects/Plaid_Document_Verification__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>documents.extracted_data.address.country</description>
    <inlineHelpText>The country extracted from the document.</inlineHelpText>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>