unpackaged/main/default/objects/Plaid_Document_Verification__c/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <description>documents.extracted_data.date_of_birth</description>
    <inlineHelpText>A date extracted from the document</inlineHelpText>
    <label>DOB</label>
    <type>Date</type>
</CustomField>