unpackaged/main/default/objects/Plaid_Document_Verification__c/fields/DOB_Analysis__c.field-meta.xml
<CustomField>
    <fullName>DOB_Analysis__c</fullName>
    <description>documents.analysis.extracted_data.date_of_birth</description>
    <inlineHelpText>Summary of match between the subject's date of birth, extracted from the document image, and the date of birth separately provided to the identity verification attempt.</inlineHelpText>
    <label>DOB Analysis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>