unpackaged/main/default/objects/Plaid_Document_Verification__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>documents.extracted_data.expiration_date</description>
    <inlineHelpText>Expiration date for the document</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>