unpackaged/main/default/objects/Plaid_Document_Verification__c/fields/Image_Quality__c.field-meta.xml
<CustomField>
    <fullName>Image_Quality__c</fullName>
    <description>documents.analysis.image_quality</description>
    <inlineHelpText>A high level description of the quality of the image the user submitted.</inlineHelpText>
    <label>Image Quality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>