unpackaged/main/default/objects/Plaid_Document_Verification__c/fields/Issuing_Country__c.field-meta.xml
<CustomField>
    <fullName>Issuing_Country__c</fullName>
    <description>documents.extracted_data.issuing_country</description>
    <inlineHelpText>Issuing country for the document</inlineHelpText>
    <label>Issuing Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>