unpackaged/main/default/objects/Plaid_Document_Verification__c/fields/Issuing_Country_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Issuing_Country_Analysis__c</fullName>
    <description>documents.analysis.extracted_data.issuing_country</description>
    <inlineHelpText>Results of whether the country that issued the provided document matches the country that the user separately provided to Plaid.</inlineHelpText>
    <label>Issuing Country Analysis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>