unpackaged/main/default/objects/Plaid_Document_Verification__c/fields/Plaid_Verification__c.field-meta.xml
<CustomField>
    <fullName>Plaid_Verification__c</fullName>
    <label>Plaid Verification</label>
    <referenceTo>Plaid_Verification__c</referenceTo>
    <relationshipLabel>Plaid Document Verifications</relationshipLabel>
    <relationshipName>Plaid_Document_Verifications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>