unpackaged/main/default/objects/Plaid_Document_Verification__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>documents.extracted_data.address.postal_code</description>
    <inlineHelpText>The postal code extracted from the document.</inlineHelpText>
    <label>Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>