unpackaged/main/default/objects/Plaid_Document_Verification__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>documents.status</description>
    <inlineHelpText>Status for document verification attempt</inlineHelpText>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>