unpackaged/main/default/objects/Plaid_Document_Verification__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>documents.extracted_data.address.street</description>
    <inlineHelpText>The full street address extracted from the document.</inlineHelpText>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>